--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-navigation/bottom-tabs": "5.5.1",
     "@react-navigation/native": "5.5.0",
     "@react-navigation/stack": "5.4.1",
+    "lodash": "4.17.15",
     "native-base": "2.13.12",
     "react": "16.9.0",
     "react-native": "0.61.0",
     "react-native-gesture-handler": "1.6.1",
     "react-native-reanimated": "1.9.0",
     "react-native-safe-area-context": "3.0.2",
-    "react-native-screens": "2.8.0"
+    "react-native-screens": "2.8.0",
+    "react-redux": "7.2.0",
+    "redux": "4.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
