--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "5.5.1",
     "@react-navigation/native": "5.5.0",
     "@react-navigation/stack": "5.4.1",
+    "@twotalltotems/react-native-otp-input": "^1.3.7",
     "lodash": "4.17.15",
     "native-base": "2.13.12",
     "react": "16.9.0",
