--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "2.8.0",
+    "react-native-swipe-list-view": "^3.1.0",
     "react-redux": "7.2.0",
     "redux": "4.0.5"
   },
