--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.5.1",
     "@react-navigation/native": "5.5.0",
     "@react-navigation/stack": "5.4.1",
-    "@twotalltotems/react-native-otp-input": "^1.3.7",
+    "@twotalltotems/react-native-otp-input": "1.3.7",
     "lodash": "4.17.15",
     "native-base": "2.13.12",
     "react": "16.9.0",
@@ -23,7 +24,9 @@
     "react-native-reanimated": "1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "2.8.0",
-    "react-native-swipe-list-view": "^3.1.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-charts": "5.4.0",
+    "react-native-swipe-list-view": "3.1.0",
     "react-redux": "7.2.0",
     "redux": "4.0.5"
   },
