--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "native-base": "2.13.12",
     "react": "16.9.0",
     "react-native": "0.61.0",
+    "react-native-device-info": "^5.6.1",
     "react-native-gesture-handler": "1.6.1",
     "react-native-modal": "11.5.6",
     "react-native-reanimated": "1.9.0",
