--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "1.11.0",
     "@react-native-community/datetimepicker": "2.4.0",
+    "@react-native-community/geolocation": "2.0.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.5.1",
     "@react-navigation/native": "5.5.0",
@@ -23,7 +24,11 @@
     "react-native": "0.61.0",
     "react-native-device-info": "^5.6.1",
     "react-native-gesture-handler": "1.6.1",
+    "react-native-localize": "1.4.0",
     "react-native-modal": "11.5.6",
+    "react-native-network-info": "5.2.1",
+    "react-native-permissions": "2.1.5",
+    "react-native-public-ip": "1.0.2",
     "react-native-reanimated": "1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "2.8.0",
