--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "native-base": "2.13.12",
     "react": "16.9.0",
     "react-native": "0.61.0",
-    "react-native-device-info": "^5.6.1",
+    "react-native-device-info": "5.6.1",
     "react-native-gesture-handler": "1.6.1",
     "react-native-localize": "1.4.0",
     "react-native-modal": "11.5.6",
