--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@twotalltotems/react-native-otp-input": "1.3.7",
     "lodash": "4.17.15",
     "native-base": "2.13.12",
+    "pako": "1.0.11",
     "react": "16.9.0",
     "react-native": "0.61.0",
     "react-native-device-info": "5.6.1",
@@ -36,7 +37,8 @@
     "react-native-svg-charts": "5.4.0",
     "react-native-swipe-list-view": "3.1.0",
     "react-redux": "7.2.0",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "socket.io-client": "2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
