--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-swipe-list-view": "3.1.0",
     "react-redux": "7.2.0",
     "redux": "4.0.5",
+    "reselect": "4.0.0",
     "socket.io-client": "2.3.0"
   },
   "devDependencies": {
