--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-redux": "7.2.0",
     "redux": "4.0.5",
     "reselect": "4.0.0",
-    "socket.io-client": "2.3.0"
+    "socket.io-client": "2.3.0",
+    "styled-components": "5.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
