--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@highcharts/highcharts-react-native": "2.2.3",
     "@react-native-community/async-storage": "1.11.0",
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/geolocation": "2.0.2",
@@ -28,7 +29,6 @@
     "react-native-localize": "1.4.0",
     "react-native-modal": "11.5.6",
     "react-native-network-info": "5.2.1",
-    "react-native-permissions": "2.1.5",
     "react-native-public-ip": "1.0.2",
     "react-native-qrcode-svg": "6.0.6",
     "react-native-reanimated": "1.9.0",
@@ -37,6 +37,7 @@
     "react-native-svg": "12.1.0",
     "react-native-svg-charts": "5.4.0",
     "react-native-swipe-list-view": "3.1.0",
+    "react-native-webview": "10.3.2",
     "react-redux": "7.2.0",
     "redux": "4.0.5",
     "reselect": "4.0.0",
