--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "2.8.0",
+    "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
     "react-native-svg-charts": "5.4.0",
     "react-native-swipe-list-view": "3.1.0",
