--- a/ios/bitpolo/Info.plist
+++ b/ios/bitpolo/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -74,15 +74,6 @@
 		<string>rubicon-icon-font.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
-		<string>Inter-Black-slnt=0.ttf</string>
-		<string>Inter-Bold-slnt=0.ttf</string>
-		<string>Inter-ExtraBold-slnt=0.ttf</string>
-		<string>Inter-ExtraLight-slnt=0.ttf</string>
-		<string>Inter-Light-slnt=0.ttf</string>
-		<string>Inter-Medium-slnt=0.ttf</string>
-		<string>Inter-Regular-slnt=0.ttf</string>
-		<string>Inter-SemiBold-slnt=0.ttf</string>
-		<string>Inter-Thin-slnt=0.ttf</string>
 		<string>Inter-Bold.ttf</string>
 		<string>Inter-Black.ttf</string>
 		<string>Inter-ExtraBold.ttf</string>
