--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "5.5.0",
     "@react-navigation/stack": "5.4.1",
     "@twotalltotems/react-native-otp-input": "1.3.7",
+    "@welldone-software/why-did-you-render": "5.0.0-alpha.2",
     "lightweight-charts": "3.1.5",
     "lodash": "4.17.15",
     "native-base": "2.13.12",
