--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,10 @@
-platform :ios, '9.0'
+require_relative '../node_modules/react-native-unimodules/cocoapods.rb'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
-
+platform :ios, '10.0'
 target 'bitpolo' do
   # Pods for bitpolo
+  use_unimodules!(modules_paths: ['../node_modules'])
+ 
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -53,3 +55,4 @@ target 'bitpolo-tvOS' do
   end
 
 end
+
