--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@highcharts/highcharts-react-native": "2.2.3",
+    "@highcharts/highcharts-react-native": "3.1.2",
     "@react-native-community/async-storage": "1.11.0",
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/geolocation": "2.0.2",
@@ -40,6 +40,7 @@
     "react-native-svg": "12.1.0",
     "react-native-svg-charts": "5.4.0",
     "react-native-swipe-list-view": "3.1.0",
+    "react-native-unimodules": "^0.10.1",
     "react-native-webview": "10.3.2",
     "react-redux": "7.2.0",
     "redux": "4.0.5",
